correct the pagination in Knot of this World list page

--- a/knot/templates/knot.html
+++ b/knot/templates/knot.html
@@ -19,10 +19,10 @@
 {% if is_paginated %}
 <ul>
     {% if page_obj.has_previous %}
-    <li><a href="?page={{ page_obj.previous_page_number }}">&laquo; NEXT </a></li>
+    <li><a href="?page={{ page_obj.previous_page_number }}">NEXT &raquo;</a></li>
     {% endif %}
     {% if page_obj.has_next %}
-    <li><a href="?page={{ page_obj.next_page_number }}"> PREVIOUS &raquo;</a></li>
+    <li><a href="?page={{ page_obj.next_page_number }}">&laquo; PREV</a></li>
     {% endif %}
 </ul>
 {% endif %}
