customize the pagination links on the Knot comic home page

--- a/knot/templates/knot.html
+++ b/knot/templates/knot.html
@@ -14,17 +14,12 @@
     <div class="post-content">{{ post.content_text | safe }}</div>
     <div class="post-date">Published on {{ post.pub_date.date }} </p>
 </div>
-{% endfor %}
 
-{% if is_paginated %}
 <ul>
-    {% if page_obj.has_previous %}
-    <li><a href="?page={{ page_obj.previous_page_number }}">NEXT &raquo;</a></li>
-    {% endif %}
-    {% if page_obj.has_next %}
-    <li><a href="?page={{ page_obj.next_page_number }}">&laquo; PREV</a></li>
-    {% endif %}
+    <li><a href="/knot/{{ post.second_latest }}">PREV</a></li>
+    <li><a href="/knot/0/">FIRST</a></li>
 </ul>
-{% endif %}
+
+{% endfor %}
 
 {% endblock %}
