--- a/knot/templates/knot_detail.html
+++ b/knot/templates/knot_detail.html
@@ -2,20 +2,35 @@
 {% load static %}
 {% block content %}
 
+<ul class="comic-nav">
+    {% if knotentry.is_first %}
+    <li>&lsaquo; PREV</li>
+    <li>&laquo; FIRST</li>
+    {% else %}
+    <li><a href="/knot/{{ knotentry.previous }}">&lsaquo; PREV</a></li>
+    <li><a href="/knot/0/">&laquo; FIRST</a></li>
+    {% endif %}
+    {% if knotentry.is_latest %}
+    <li>LATEST &raquo;</li>
+    <li>NEXT &rsaquo;</li>
+    {% else %}
+    <li><a href="/knot/{{ knotentry.latest }}">LATEST &raquo;</a></li>
+    <li><a href="/knot/{{ knotentry.next }}">NEXT &rsaquo;</a></li>
+    {% endif %}
+</ul>
+
 <div class="knot-post">
-    <div class="post-title">
-        <h3>{{ knotentry.title_text }}</h3>
-        <p class="post-date">{{ knotentry.pub_date.date }}</p>
-    </div>
-    <div class="post-comic"><img src="{{ knotentry.comic_image.url }}" /></div>
+    <div class="post-title"><h4>Page {{ knotentry.page_num }} - &quot;{{ knotentry.title_text }}&quot;</h4></div>
+    <div class="post-comic"><img src="{{ knotentry.comic_image.url }}" class="comic"/></div>
     <div class="post-content">{{ knotentry.content_text | safe }}</div>
+    <div class="post-date">- Dax Ripley - {{ knotentry.pub_date.date }}</p>
 </div>
 
-<ul>
-    <li><a href="/knot/{{ knotentry.previous }}">PREV</a></li>
-    <li><a href="/knot/0/">FIRST</a></li>
-    <li><a href="/knot/{{ knotentry.latest }}">LATEST</a></li>
-    <li><a href="/knot/{{ knotentry.next }}">NEXT</a></li>
+<ul class="comic-nav">
+    <li><a href="/knot/{{ knotentry.previous }}">&lsaquo; PREV</a></li>
+    <li><a href="/knot/0/">&laquo; FIRST</a></li>
+    <li><a href="/knot/{{ knotentry.latest }}">LATEST &raquo;</a></li>
+    <li><a href="/knot/{{ knotentry.next }}">NEXT &rsaquo;</a></li>
 </ul>
 
 {% endblock %}
