hide the dedicated contact page and reserve it for a future email form

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
       <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'music' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'blog' %}" class="navi-link" id="navi-link-blog"></a>
-      <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
+      <!--<a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>-->
     </div> <!-- #navi-links -->
     <div id="navi-sep"></div>
   </div> <!-- .content-wrapper -->
@@ -57,7 +57,7 @@
       <a href="{% url 'comics' %}" class="navi-link" id="navi-link-comics"></a>
       <a href="{% url 'music' %}" class="navi-link" id="navi-link-music"></a>
       <a href="{% url 'blog' %" class="navi-link" id="navi-link-blog"></a>
-      <a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>
+      <!--<a href="{% url 'contact' %}" class="navi-link" id="navi-link-contact"></a>-->
     </div> <!-- #navi-links -->
     <p>Copyright &copy; {% now "Y" %} Jamie Unrau. All Rights Reserved.</p>
     <div id="footer-sep-bottom"></div>
