refactor comic page navigation

--- a/knot/templates/knot.html
+++ b/knot/templates/knot.html
@@ -7,6 +7,8 @@
 <ul class="comic-nav">
     <li><a href="/knot/{{ post.second_latest }}">&lsaquo; PREV</a></li>
     <li><a href="/knot/0/">&laquo; FIRST</a></li>
+    <li>LATEST &raquo;</li>
+    <li>NEXT &rsaquo;</li>
 </ul>
 
 <div class="knot-post">
@@ -19,6 +21,8 @@
 <ul class="comic-nav">
     <li><a href="/knot/{{ post.second_latest }}">PREV</a></li>
     <li><a href="/knot/0/">FIRST</a></li>
+    <li>LATEST &raquo;</li>
+    <li>NEXT &rsaquo;</li>
 </ul>
 
 {% endfor %}
