--- a/knot/templates/knot_detail.html
+++ b/knot/templates/knot_detail.html
@@ -2,22 +2,7 @@
 {% load static %}
 {% block content %}
 
-<ul class="comic-nav">
-    {% if knotentry.is_first %}
-    <li>&lsaquo; PREV</li>
-    <li>&laquo; FIRST</li>
-    {% else %}
-    <li><a href="/knot/{{ knotentry.previous }}">&lsaquo; PREV</a></li>
-    <li><a href="/knot/0/">&laquo; FIRST</a></li>
-    {% endif %}
-    {% if knotentry.is_latest %}
-    <li>LATEST &raquo;</li>
-    <li>NEXT &rsaquo;</li>
-    {% else %}
-    <li><a href="/knot/{{ knotentry.latest }}">LATEST &raquo;</a></li>
-    <li><a href="/knot/{{ knotentry.next }}">NEXT &rsaquo;</a></li>
-    {% endif %}
-</ul>
+{% include 'knot_nav.html' %}
 
 <div class="knot-post">
     <div class="post-title"><h4>Page {{ knotentry.page_num }} - &quot;{{ knotentry.title_text }}&quot;</h4></div>
@@ -26,11 +11,6 @@
     <div class="post-date">- Dax Ripley - {{ knotentry.pub_date.date }}</p>
 </div>
 
-<ul class="comic-nav">
-    <li><a href="/knot/{{ knotentry.previous }}">&lsaquo; PREV</a></li>
-    <li><a href="/knot/0/">&laquo; FIRST</a></li>
-    <li><a href="/knot/{{ knotentry.latest }}">LATEST &raquo;</a></li>
-    <li><a href="/knot/{{ knotentry.next }}">NEXT &rsaquo;</a></li>
-</ul>
+{% include 'knot_nav.html' %}
 
 {% endblock %}
