show coming-soon message if no comics exist yet

--- a/knot/templates/knot.html
+++ b/knot/templates/knot.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% block content %}
 
+{% if knot_list %}
+
 {% for post in knot_list %}
 
 <ul class="comic-nav">
@@ -26,5 +28,11 @@
 </ul>
 
 {% endfor %}
+
+{% else %}
+
+<p>Coming soon!</p>
+
+{% endif %}
 
 {% endblock %}
