change cover image for Knot of this World comic

--- a/pages/templates/comics.html
+++ b/pages/templates/comics.html
@@ -6,6 +6,6 @@
     <h2>COMICS</h2>
 </div>
 
-<center><a href="{% url 'knot' %}" class="comic-link"><img src="/static/images/comic-kotw.jpeg" class="comic-thumb" /></a></center>
+<center><a href="{% url 'knot' %}" class="comic-link"><img src="/static/images/comic-kotw.png" class="comic-thumb" /></a></center>
 
 {% endblock %}
