--- a/knot/templates/knot.html
+++ b/knot/templates/knot.html
@@ -21,8 +21,8 @@
 </div>
 
 <ul class="comic-nav">
-    <li><a href="/knot/{{ post.second_latest }}">PREV</a></li>
-    <li><a href="/knot/0/">FIRST</a></li>
+    <li><a href="/knot/{{ post.second_latest }}">&lsaquo; PREV</a></li>
+    <li><a href="/knot/0/">&laquo; FIRST</a></li>
     <li>LATEST &raquo;</li>
     <li>NEXT &rsaquo;</li>
 </ul>
