--- a/knot/templates/knot_base.html
+++ b/knot/templates/knot_base.html
@@ -15,7 +15,9 @@
 <body>
 <div id="knot">
 
-  <img src="/static/images/comic-kotw-logo.png" class="comic-logo" id="knot-logo" />
+  <a href="{% url 'knot' %}">
+    <img src="/static/images/comic-kotw-logo.png" class="comic-logo" id="knot-logo" />
+  </a>
   <h3>A supernaturally kinky slice of life by <a href="{% url 'index' %}">Dax Ripley</a></h3>
 
 {% block content %}{% endblock content %}
