On comic pages, change Dax Ripley link to Twitter instead of main website

--- a/knot/templates/knot_base.html
+++ b/knot/templates/knot_base.html
@@ -18,7 +18,7 @@
   <a href="{% url 'knot' %}">
     <img src="/static/images/comic-kotw-logo.png" class="comic-logo" id="knot-logo" />
   </a>
-  <h3>A supernaturally kinky slice of life by <a href="{% url 'index' %}">Dax Ripley</a></h3>
+  <h3>A supernaturally kinky slice of life by <a href="https://twitter.com/dax_ripley">Dax Ripley</a></h3>
 
 {% block content %}{% endblock content %}
 
