add open graph protocol meta tags

--- a/knot/templates/knot_base.html
+++ b/knot/templates/knot_base.html
@@ -11,6 +11,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
   <link rel="manifest" href="/static/favicon/site.webmanifest">
+  <meta property="og:title" content="Knot of this World" />
+  <meta property="og:type" content="text/html" />
+  <meta property="og:url" content="https://www.dax.rip/knot/" />
+  <meta property="og:image" content="https://www.dax.rip/static/images/og-image-knot.png" />
+  <meta property="og:description" content="A web comic by Dax Ripley." />
 </head>
 <body>
 <div id="knot">
