--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
   <link rel="manifest" href="/static/favicon/site.webmanifest">
+  <meta property="og:title" content="Jamie Unrau" />
+  <meta property="og:type" content="text/html" />
+  <meta property="og:url" content="https://www.dax.rip/" />
+  <meta property="og:image" content="https://www.dax.rip/static/images/og-image-dax.png" />
+  <meta property="og:description" content="The website of Jamie Unrau, aka Dax Ripley, and home of the web comic Knot of this World." />
 </head>
 <body>
 <div id="mainbody">
