create separate favicon for comic

--- a/knot/templates/knot_base.html
+++ b/knot/templates/knot_base.html
@@ -7,10 +7,10 @@
 <title>Knot of this World</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="{% static 'stylesheets/knot.css' %}">
-  <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/static/favicon/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon-knot/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-knot/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-knot/favicon-16x16.png">
+  <link rel="manifest" href="/static/favicon-knot/site.webmanifest">
   <meta property="og:title" content="Knot of this World" />
   <meta property="og:type" content="text/html" />
   <meta property="og:url" content="https://www.dax.rip/knot/" />
