fix incorrect open graph tag by changing og:type to website

--- a/knot/templates/knot_base.html
+++ b/knot/templates/knot_base.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-knot/favicon-16x16.png">
   <link rel="manifest" href="/static/favicon-knot/site.webmanifest">
   <meta property="og:title" content="Knot of this World" />
-  <meta property="og:type" content="text/html" />
+  <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.dax.rip/knot/" />
   <meta property="og:image" content="https://www.dax.rip/static/images/og-image-knot.png" />
   <meta property="og:description" content="A web comic by Dax Ripley." />
