Add another subtitle about comic frequency

--- a/knot/templates/knot_base.html
+++ b/knot/templates/knot_base.html
@@ -24,6 +24,7 @@
     <img src="/static/images/comic-kotw-logo.png" class="comic-logo" id="knot-logo" />
   </a>
   <h3>A supernatural slice of life by <a href="https://twitter.com/dax_ripley">Dax Ripley</a></h3>
+  <h5>New comics as few and far between as my brain cells.</h5>
 
 {% block content %}{% endblock content %}
 
